test/cpls/errors/undefined-binding.cpls
{
  "type": "WORD",
  "name": "x",
  "offset": 0,
  "line": 1,
  "column": 1
}